# codewars-msg-validate

./: Cargo.toml
src/: lib.rs
